--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>The Generics | Store</title>
+        <title>The Store</title>
         <meta name="description" content="This is the description">
         <link rel="stylesheet" href="style.css" />
     </head>
